force-app/main/default/objects/Patient_Object__c/Patient_Object__c.object-meta.xml
<CustomObject>
    <label>Patient Object</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>