force-app/main/default/objects/Patient_Object__c/fields/Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Name</label>
    <referenceTo>Doctor_Object__c</referenceTo>
    <relationshipLabel>Patient Object</relationshipLabel>
    <relationshipName>Patient_Object</relationshipName>
    <type>Lookup</type>
</CustomField>