force-app/main/default/objects/Patient_Object__c/fields/Patient_Category__c.field-meta.xml
<CustomField>
    <fullName>Patient_Category__c</fullName>
    <label>Patient Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Patient</fullName>
            </value>
            <value>
                <fullName>Out Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>