force-app/main/default/objects/Patient_Object__c/fields/Treatment_for__c.field-meta.xml
<CustomField>
    <fullName>Treatment_for__c</fullName>
    <label>Treatment for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Ortho</fullName>
            </value>
            <value>
                <fullName>Cardio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>